# openprint

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  mcp.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  printer-report.yml
.github/workflows/: ci.yml  release.yml
Formula/: openprint.rb
docker/: Dockerfile  Dockerfile.bridge  docker-compose.yml
examples/: discover_printers.py  format_negotiation.py  job_polling.py  print_file.py  run_bridge.py  run_server.py  supply_monitoring.py  webhook_receiver.py
scripts/: build.sh  install.ps1  install.sh
spec/: openprint-protocol-v1.md
src/openprint/: __init__.py  auth.py  backend.py  bridge.py  client.py  config.py  dashboard.py  discovery.py  errors.py  integrations.py  mcp_server.py  middleware.py  models.py  pdf.py  progress.py  resilience.py  scanner.py  server.py  status.py  store.py  testkit.py  tls.py
src/openprint/backends/: __init__.py  cups.py  dummy.py  ipp.py
src/openprint/cli/: __main__.py  main.py
src/openprint/static/: index.html
systemd/: openprint-bridge.service
tests/: conftest.py  test_auth.py  test_backends.py  test_bridge.py  test_cli.py  test_client.py  test_dashboard.py  test_discovery.py  test_integrations.py  test_ipp_backend.py  test_mcp_server.py  test_middleware.py  test_models.py  test_pdf.py  test_progress.py  test_resilience.py  test_scanner.py  test_server.py  test_store.py  test_testkit.py  test_tls.py
