[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openprint"
version = "0.1.0"
description = "OpenPrint Protocol — driverless HTTP/REST printing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "OpenPrint Contributors" }]
keywords = ["printing", "protocol", "driverless", "rest", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "zeroconf>=0.131",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "mcp>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
]
full = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/yahorse/openprint"
Repository = "https://github.com/yahorse/openprint"
Documentation = "https://github.com/yahorse/openprint#readme"
Changelog = "https://github.com/yahorse/openprint/releases"

[project.scripts]
opp = "openprint.cli.main:main"
openprint-server = "openprint.server:main"
openprint-bridge = "openprint.bridge:main"
openprint-mcp = "openprint.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openprint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["N818"]

[tool.mypy]
python_version = "3.10"
strict = true
